<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PracticalTest02MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_title"
            android:textSize="24sp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <EditText
            android:id="@+id/server_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/server_port_number" />

        <Button
            android:id="@+id/server_connect_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_server_btn" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_title"
        android:textSize="24sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/client_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/client_address"></EditText>

        <EditText
            android:id="@+id/client_port_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/server_port_number"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/city"/>
        <Spinner
            android:id="@+id/weather_metric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/metrics_array"/>
    </LinearLayout>

    <Button
        android:id="@+id/get_forecast_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/get_forecast"/>

</LinearLayout>